--- a/Movies.Api/appsettings.json
+++ b/Movies.Api/appsettings.json
@@ -7,6 +7,7 @@
     "Issuer": "https://id.nickchapsas.com",
     "Audience": "https://movies.nickchapsas.com"
   },
+  "ApiKey": "5a90cc44-61eb-4f83-8ba3-98e37fa736fa",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
